--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.7",
+    "emoji-picker-react": "^4.17.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "react": "^18.3.1",
